--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
   },
   "homepage": "https://github.com/aybiancas/Website-Project#readme",
   "dependencies": {
+    "bootstrap": "^5.3.5",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "sharp": "^0.34.0"
   }
 }
