--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "in",
     "engleza"
   ],
-  "author": "Bianca Sandu",
+  "author": "Bianca S",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/aybiancas/Website-Project/issues"
