--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "nodemon": "^3.1.9",
+    "pg": "^8.14.1",
+    "sass": "^1.86.3",
     "sharp": "^0.34.0"
   }
 }
