--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "homepage": "https://github.com/aybiancas/Website-Project#readme",
   "dependencies": {
     "bootstrap": "^5.3.5",
+    "bootstrap-icons": "^1.13.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "nodemon": "^3.1.9",
